Fixed test for story #536
Signed-off-by: Joel Kuiper <me@joelkuiper.eu>