@@ -1,24 +1,18 @@
 package org.drugis.addis.presentation;
 
-import static org.junit.Assert.*;
-
-import java.util.List;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 import org.drugis.addis.ExampleData;
-import org.drugis.addis.entities.AbstractDose;
 import org.drugis.addis.entities.Domain;
 import org.drugis.addis.entities.DomainImpl;
 import org.drugis.addis.entities.DoseUnit;
-import org.drugis.addis.entities.FixedDose;
 import org.drugis.addis.entities.Study;
 import org.drugis.addis.entities.treatment.Category;
-import org.drugis.addis.entities.treatment.ChoiceNode;
-import org.drugis.addis.entities.treatment.DecisionTree;
-import org.drugis.addis.entities.treatment.DecisionTreeNode;
 import org.drugis.addis.entities.treatment.DosedDrugTreatment;
 import org.drugis.addis.entities.treatment.LeafNode;
 import org.drugis.addis.entities.treatment.RangeEdge;
-import org.drugis.addis.entities.treatment.TypeEdge;
+import org.drugis.addis.presentation.wizard.DosedDrugTreatmentWizardPresentation;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -31,16 +25,15 @@ public class DosedDrugTreatmentPresentationTest {
 	private DosedDrugTreatment d_bean;
 	private DosedDrugTreatmentPresentation d_pm;
 	private Domain d_domain;
-	private DecisionTree d_tree;
+	private DosedDrugTreatmentWizardPresentation d_wpm;
 
 	@Before
 	public void setUp() {
-		d_bean = new DosedDrugTreatment("HD/LD", ExampleData.buildDrugCandesartan(), DoseUnit.MILLIGRAMS_A_DAY);
+		d_bean = new DosedDrugTreatment("HD/LD", ExampleData.buildDrugFluoxetine(), DoseUnit.MILLIGRAMS_A_DAY);
 		d_domain = new DomainImpl();
 		ExampleData.initDefaultData(d_domain);
 		d_pm = new DosedDrugTreatmentPresentation(d_bean, d_domain);
-		d_tree = d_bean.getDecisionTree();
-
+		d_wpm = new DosedDrugTreatmentWizardPresentation(d_bean, d_domain);
 	}
 
 	@Test
@@ -50,35 +43,28 @@ public class DosedDrugTreatmentPresentationTest {
 		final Study studyFava2002 = ExampleData.buildStudyFava2002();	//dose 30
 		final Category foo = new Category("foo");
 		final Category bar = new Category("bar");
+		final Category baz = new Category("baz");
 
 		// NOTE: studies Bennie and Chouinard have already been added by default, so just add Fava2002 and its dependencies here
 		d_domain.getAdverseEvents().add(ExampleData.buildAdverseEventSexualDysfunction());
 		d_domain.getStudies().add(studyFava2002);
-		
-		TypeEdge edge = (TypeEdge) d_tree.getOutEdges(d_bean.getRootNode()).toArray()[1];
-		d_tree.addChild(edge, d_bean.getRootNode(), new ChoiceNode(FixedDose.class, FixedDose.PROPERTY_QUANTITY));
 
-//		final RangeNode prototype = new RangeNode(AbstractDose.class, AbstractDose.PROPERTY_DOSE_TYPE);
-//		d_pm.setKnownDoses(prototype);
-//
-//		List<RangeNode> splits = d_pm.splitKnowDoseRanges(21, false);
-//		d_pm.setKnownDoses(splits.get(0), catNodeFoo);
-		Pair<RangeEdge> splits = splitRangeOnChild(bar, 21, false, 0);
+		d_wpm.getModelForFixedDose().setValue(d_wpm.getFixedRangeNode());
+		d_wpm.addDefaultRangeEdge(d_wpm.getFixedRangeNode());
+		Pair<RangeEdge> splits = d_wpm.splitRange((RangeEdge) d_wpm.getOutEdges(d_wpm.getFixedRangeNode()).get(0), 21.0, false);
+		d_wpm.getModelForEdge(splits.getFirst()).setValue(new LeafNode(foo));
+		d_wpm.getModelForEdge(splits.getSecond()).setValue(new LeafNode(bar));
 
 		final ObservableList<Study> fooStudies = d_pm.getCategorizedStudyList(foo).getIncludedStudies();
 		final ObservableList<Study> barStudies = d_pm.getCategorizedStudyList(bar).getIncludedStudies();
+		final ObservableList<Study> bazStudies = d_pm.getCategorizedStudyList(baz).getIncludedStudies();
 
 		assertTrue(fooStudies.contains(studyBennie));
 		assertFalse(fooStudies.contains(studyChouinard));
 		assertFalse(fooStudies.contains(studyFava2002));
-		assertTrue(barStudies.isEmpty());
-	}
-
-	private Pair<RangeEdge> splitRangeOnChild(final Category bar, int value, boolean lowerRangeOpen, int i) {
-		ChoiceNode parent = (ChoiceNode) d_tree.getChildren(d_bean.getRootNode()).toArray()[i];
-		RangeEdge rangeEdge = RangeEdge.createDefault();
-		d_tree.addChild(rangeEdge, parent, new LeafNode(bar));
-
-		return d_bean.splitRange(rangeEdge, value, lowerRangeOpen);
+		
+		assertTrue(barStudies.contains(studyChouinard));
+		assertTrue(barStudies.contains(studyFava2002));
+		assertTrue(bazStudies.isEmpty());
 	}
 }
